FetchXML Condition Between not working. Changed to greater than and less than.

--- a/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/BDK.XrmToolBox.RecycleBin.csproj
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/BDK.XrmToolBox.RecycleBin.csproj
@@ -193,6 +193,7 @@
     <EmbeddedResource Include="FetchXml.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>FetchXml.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PluginControl.resx">
       <DependentUpon>PluginControl.cs</DependentUpon>
